# chip8

./: .gitignore  CMakeLists.txt  README.md  decode.c  display.h  display_sdl.c  main.c  meson.build  opcode.h
opcode/: 00E0.c  00EE.c  1NNN.c  2NNN.c  3XNN.c  5XY0.c  7XNN.c  8XY1.c  8XY3.c  8XY5.c  ANNN.c  CXNN.c  EX9E.c  EXA1.c  FX15.c  FX29.c
src/: chip8.h
src/opcode/: 0NNN.c  4XNN.c  6XNN.c  8XY0.c  8XY2.c  8XY4.c  8XY6.c  8XY7.c  8XYE.c  9XY0.c  BNNN.c  DXYN.c  FX07.c  FX0A.c  FX18.c  FX1E.c  FX33.c  FX55.c  FX65.c
